Init of migration from Java 8 to Java 17